--- a/index.html
+++ b/index.html
@@ -50,5 +50,5 @@
         </section>
     </div>
 </body>
-    <script></script>
+    <script src="app.js"type="text/javascript" defer></script>
 </html>
