--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="temp">
                 <span class="deg">°</span>
                 <span class="number">22</span>
-                <div class="weather">Broken Clouds</div>
+                <div class="weather">__</div>
             </div>
             <div class="location">
                 <i class="fas fa-map-marker-alt"></i>
-                <span>Toronto, Canada</span>
+                <span>__, __</span>
             </div>
         </section>
         <section class="second-part">
