--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="img/sun-cloud.png">
             <div class="temp">
                 <span class="deg">°</span>
-                <span class="number">22</span>
+                <span class="number">__</span>
                 <div class="weather">__</div>
             </div>
             <div class="location">
@@ -35,7 +35,7 @@
             <div class="column">
                 <i class="fas fa-thermometer-three-quarters"></i>
                 <div class="temp">
-                    <span class="number-2">19</span>
+                    <span class="number-2">__</span>
                     <span class="deg">°</span>
                 </div>
                 <p>Feels Like</p>
@@ -43,7 +43,7 @@
             <div class="column-1">
                 <i class="fas fa-tint"></i>
                 <div class="details">
-                    <span>80%</span>
+                    <span>__</span>
                     <p>Humidity</p>
                 </div>
             </div>
