--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <p class="info-text">JavaScript - Weather App</p>
+        <p class="info-text">Weather Forecast</p>
         <section class="input-part">
             <input
                 type="text"
